--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,24 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  box-sizing: border-box;
+}
+
+.container {
+  padding: 0 10px;
+  margin: 0 auto;
+
+  @media screen and (min-width: 768px) {
+    width: 700px;
+  }
+  @media screen and (min-width: 1024px) {
+    width: 900px;
+  }
+
+  @media screen and (min-width: 1440px) {
+    width: 1290px;
+  }
+}
