--- a/src/app/holidays/components/countries-list/countries-list.component.html
+++ b/src/app/holidays/components/countries-list/countries-list.component.html
@@ -3,8 +3,8 @@
     <mat-label>Search</mat-label>
     <input matInput type="text" [(ngModel)]="searchQuery" (ngModelChange)="changeQuery($event)">
   </mat-form-field>
-  <ul>
-    <li *ngFor="let country of countriesFiltered">{{ country.name }}</li>
-  </ul>
+  <mat-nav-list *ngFor="let country of countriesFiltered">
+      <a mat-list-item [routerLink]="['/countries/'+country.countryCode]"  [queryParams]="{ countryName: country.name }">{{ country.name }}</a>
+  </mat-nav-list>
   <div *ngIf="!countriesFiltered.length">No countries</div>
 </div>
