add years and opportunity to show data for another year

--- a/src/app/holidays/components/country-page/country-page.component.scss
+++ b/src/app/holidays/components/country-page/country-page.component.scss
@@ -3,3 +3,11 @@
     flex-direction: column;
     gap :10px
 }
+
+.mat-card-header {
+    background-color: rgb(228, 227, 227);
+}
+
+.mat-list{
+    display: inline-block;
+}
