--- a/src/app/holidays/components/countries-list/countries-list.component.html
+++ b/src/app/holidays/components/countries-list/countries-list.component.html
@@ -1,10 +1,19 @@
 <div class="container">
-  <mat-form-field >
+  <mat-form-field>
     <mat-label>Search</mat-label>
-    <input matInput type="text" [(ngModel)]="searchQuery" (ngModelChange)="changeQuery($event)">
+    <input
+      matInput
+      type="text"
+      [(ngModel)]="searchQuery"
+      (ngModelChange)="changeQuery($event)" />
   </mat-form-field>
   <mat-nav-list *ngFor="let country of countriesFiltered">
-      <a mat-list-item [routerLink]="['/countries/'+country.countryCode]"  [queryParams]="{ countryName: country.name }">{{ country.name }}</a>
+    <a
+      mat-list-item
+      [routerLink]="['/countries/' + country.countryCode]"
+      [queryParams]="{ countryName: country.name, id: country.countryCode }"
+      >{{ country.name }}</a
+    >
   </mat-nav-list>
   <div *ngIf="!countriesFiltered.length">No countries</div>
 </div>
