--- a/src/app/holidays/components/country-page/country-page.component.html
+++ b/src/app/holidays/components/country-page/country-page.component.html
@@ -1,16 +1,28 @@
 <div class="container card-wrapper">
+  <h2>{{ countryName }}</h2>
+  <app-years-slider (newValue)="updateData($event)"></app-years-slider>
+  <h3>Holidays {{ year }}</h3>
+  <ng-container *ngIf="holidays.length">
     <mat-card *ngFor="let holiday of holidays" appearance="outlined">
-        <mat-card-header>
-          <mat-card-title><h3>{{holiday.name}}</h3></mat-card-title>
-        </mat-card-header>
-        <mat-card-content>
-          <p><b>Local name: </b>{{holiday.localName}}</p>
-          <p><b>Holiday date: </b>{{holiday.date| date :'fullDate'}}</p>
-          <p><b>Global: </b>{{holiday.global?"Yes":"No"}}</p>
-          <p><b>Type: </b></p>
-          <mat-list role="list" *ngFor="let type of holiday.types" aria-label="holiday types">
-              <mat-list-item role="listitem">{{type}}</mat-list-item>
+      <mat-card-header class="mat-card-header">
+        <mat-card-title
+          ><h3>{{ holiday.name }}</h3></mat-card-title
+        >
+      </mat-card-header>
+      <mat-card-content>
+        <p><b>Local name: </b>{{ holiday.localName }}</p>
+        <p><b>Holiday date: </b>{{ holiday.date | date: 'fullDate' }}</p>
+        <p><b>Global: </b>{{ holiday.global ? 'Yes' : 'No' }}</p>
+        <p>
+          <b>Type: </b
+          ><mat-list class="mat-list" role="list" aria-label="holiday types">
+            <mat-list-item *ngFor="let type of holiday.types" role="listitem">{{
+              type
+            }}</mat-list-item>
           </mat-list>
-        </mat-card-content>
+        </p>
+      </mat-card-content>
     </mat-card>
+  </ng-container>
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
 </div>
