--- a/src/app/holidays/components/country-page/country-page.component.scss
+++ b/src/app/holidays/components/country-page/country-page.component.scss
@@ -1,5 +1,5 @@
-.card-wrapper{
-    display: flex;
-    flex-direction: column;
-    gap :10px
+.card-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
